styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --cyan-600: hsl(192, 37%, 48%);
  --cyan-300: hsl(192, 90%, 77%);

  --purple-300: hsl(268, 100%, 86%);
  --purple-600: hsl(268, 34%, 53%);

  --slate-900: hsl(240, 21%, 20%);
  --slate-600: hsl(240, 10%, 57%);
  --slate-300: hsl(240, 18%, 85%);

  --white: hsl(0, 0%, 100%);

  --spacing-1600: 8rem;
  --spacing-1500: 7.5rem;
  --spacing-1400: 7rem;
  --spacing-1300: 6.5rem;

  --spacing-1200: 6rem;
  --spacing-1100: 5.5rem;
  --spacing-1000: 5rem;
  --spacing-950: 4.75rem;
  --spacing-900: 4.5rem;
  --spacing-800: 4rem;
  --spacing-700: 3.5rem;
  --spacing-600: 3rem;
  --spacing-500: 2.5rem;
  --spacing-400: 2rem;
  --spacing-300: 1.5rem;
  --spacing-200: 1rem;
  --spacing-150: 0.75rem;
  --spacing-100: 0.5rem;
  --spacing-50: 0.25rem;

  --fweight-thin: 100;
  --fweight-extra-light: 200;
  --fweight-light: 300;
  --fweight-regular: 400;
  --fweight-medium: 500;
  --fweight-semi-bold: 600;
  --fweight-bold: 700;
  --fweight-extra-bold: 800;
  --fweight-black: 900;
  --fweight-extra-black: 1000;

  color: var(--slate-900);
  font-family: "Red Hat Display", sans-serif;
  font-weight: var(--fweight-medium);
}

@media (prefers-reduced-motion: no-preference) {
  * {
    scroll-behavior: smooth;
  }

  :root {
    --transition: all 0.5s ease, outline 0.1s ease;
  }
}

.attribution {
  position: absolute;
  inset-inline: 50% auto;
  inset-block: auto 1rem;
  translate: -50%;
  margin: 0;
  font-size: 11px;
  text-align: center;

  a {
    color: hsl(228, 45%, 44%);
  }
}

body {
  position: relative;
  display: grid;
  place-items: center;
  min-block-size: 100dvb;
  margin: 0;
}

img {
  display: block;
}

.Text1 {
  font-size: 2.5rem;
  font-weight: var(--fweight-black);
  line-height: 1.1;

  @media (width > 30rem) {
    font-size: 3rem;
  }

  @media (width > 52rem) {
    font-size: 4rem;
  }
}

.Text2 {
  font-size: 2rem;
  font-weight: var(--fweight-black);
  line-height: 1.1;

  @media (width > 30rem) {
    font-size: 2.25rem;
  }

  @media (width > 52rem) {
    font-size: 2.5rem;
  }
}

.Text3 {
  font-size: 0.75rem;
  font-weight: var(--fweight-black);
  letter-spacing: 0.25em;
  line-height: 1.1;

  @media (width > 30rem) {
    font-size: 0.875rem;
  }

  @media (width > 52rem) {
    font-size: 1rem;
  }
}

.Text4 {
  font-size: 1rem;
  line-height: 1.5;

  @media (width > 52rem) {
    font-size: 1.125rem;
  }
}

.Text5 {
  font-size: 1rem;
  font-weight: var(--fweight-black);
  line-height: 1.5;
}

main {
  display: grid;
  overflow: hidden;
}

.Nav {
  display: grid;
  place-items: end center;
  padding-block-start: var(--spacing-600);

  @media (width > 52rem) {
    padding-block-start: var(--spacing-1000);
  }
}

.Nav__link {
  color: inherit;
  text-decoration: none;
}

.Nav__logo {
  inline-size: auto;
  block-size: 1.75rem;
}

.Header {
  position: relative;
  padding-block: var(--spacing-800) var(--spacing-400);
  padding-inline: var(--spacing-400);

  @media (width > 30rem) {
    padding-block-end: var(--spacing-800);
  }

  @media (width <= 52rem) {
    overflow: hidden;
  }

  @media (width > 52rem) {
    padding-blocke: var(--spacing-800);
    padding-inline: var(--spacing-1000);
  }
}

.Header__content {
  position: relative;
  display: grid;
  grid-template-columns: 100%;
  row-gap: var(--spacing-300);
  column-gap: var(--spacing-400);
  text-align: center;

  @media (width > 52rem) {
    grid-template-columns: 1fr min(100%, 28rem) 1fr;
    row-gap: var(--spacing-400);
    padding-block: var(--spacing-300);
  }

  &::before,
  &::after {
    position: absolute;
    content: "";
    display: block;
    align-self: center;
    block-size: 19rem;
    aspect-ratio: 394/303;
    background: no-repeat center / contain;
  }

  &::before {
    @media (width <= 52rem) {
      position: relative;
      inset-inline-start: 50%;
      inline-size: calc(100vi + 2 * var(--spacing-400));
      block-size: calc((100vi + 2 * var(--spacing-400)) / 2.7);
      align-self: center;
      translate: -50%;
      margin-block-end: 3rem;
      background-image: url("./assets/tablet/image-hero.png");
    }

    @media (width > 52rem) {
      inset-block-start: 0;
      inset-inline-end: calc(50vi + 17rem);
      background-image: url("./assets/desktop/image-hero-left.png");
    }
  }

  &::after {
    display: none;

    @media (width > 52rem) {
      inset-inline-start: calc(50vi + 17rem);
      inset-block-end: 0;
      display: block;
      background-image: url("./assets/desktop/image-hero-right.png");
    }
  }
}

.Header__title,
.Header__subtitle,
.Header__buttons {
  @media (width > 52rem) {
    grid-column: 2;
  }
}

.Header__title {
}

.Header__subtitle {
  color: var(--slate-600);
}

.Header__buttons {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: var(--spacing-200);
}

/* .Header__logo {
  position: absolute;
  inset-block-end: 100%;
  inset-inline-start: 50%;
  translate: -50%;
} */

.Button {
  display: flex;
  gap: var(--spacing-50);
  justify-content: center;
  padding-block: var(--spacing-200);
  padding-inline: var(--spacing-500);
  color: var(--white);
  font-weight: var(--fweight-bold);
  text-decoration: none;
  border-radius: 2rem;
  transition: var(--transition);

  &.Button--primary {
    background-color: var(--cyan-600);

    &:hover,
    &:focus-visible {
      background-color: #71c0d4;
    }

    span {
      color: var(--cyan-300);
    }
  }

  &.Button--secondary {
    background: var(--purple-600);

    &:hover,
    &:focus-visible {
      background-color: #b18bdd;
    }

    span {
      color: var(--purple-300);
    }
  }
}

.Section {
  display: grid;
  grid-template-columns: min(100%, 70rem);
  justify-content: center;
  gap: var(--spacing-800);
  padding-block: var(--spacing-400) var(--spacing-800);
  padding-inline: var(--spacing-400);
  text-align: center;

  @media (width > 30rem) {
    padding-block-start: var(--spacing-700);
  }

  @media (width > 52rem) {
    padding-block-end: var(--spacing-900);
    padding-inline: var(--spacing-1000);
  }

  .Text4 {
    color: var(--slate-600);
  }
}

.Number {
  order: -2;
  position: relative;
  z-index: 1;
  display: grid;
  place-items: center;
  place-self: center;
  inline-size: 3.5rem;
  aspect-ratio: 1;
  margin-block-start: 5rem;
  color: var(--slate-600);
  background: var(--white);
  border: 1px solid var(--slate-300);
  border-radius: 50%;

  &::before {
    position: absolute;
    z-index: -1;
    inset-block-end: 100%;
    inset-inline-start: 50%;
    translate: -50%;
    content: "";
    display: block;
    block-size: 5rem;
    inline-size: 1px;
    background: var(--slate-300);
  }
}

.Section__content {
  display: grid;
  gap: var(--spacing-400);
  justify-self: center;
  inline-size: min(100%, 31.5rem);

  @media (width > 52rem) {
    inline-size: min(100%, 34rem);
  }
}

.Section__title {
  display: grid;
  gap: var(--spacing-200);
  justify-self: center;
    inline-size: min(100%, 28.5rem);
  text-align: center;

  span {
    color: var(--cyan-600);
    text-transform: uppercase;
  }
}

.Illustrations {
  order: -1;
  display: grid;
  gap: var(--spacing-200);
  grid-template-columns: repeat(2, 1fr);

  @media (width > 30rem) {
    gap: var(--spacing-300);
    grid-template-columns: repeat(4, 1fr);
  }

  @media (width > 52rem) {
    gap: var(--spacing-400);
    font-size: 1rem;
  }
}

.Illustration {
  inline-size: 100%;
  aspect-ratio: 1;
  border-radius: 0.5rem;
}

.Footer {
  position: relative;
  display: grid;
  place-items: center;
  padding-block: var(--spacing-800);
  padding-inline: var(--spacing-400);
  margin-block-start: 5rem;

  background: url("./assets/desktop/image-footer.jpg") no-repeat center / cover;

  @media (width > 52rem) {
    padding-block: var(--spacing-1400);
    padding-inline: var(--spacing-1000);
  }

  .Number {
    position: absolute;
    inset-block-end: 100%;
    inset-inline-start: 50%;
    translate: -50% 50%;
  }
}

.Footer__content {
  display: grid;
  gap: var(--spacing-400);
  justify-items: center;
  place-self: center;
  inline-size: min(100%, 31.5rem);
  text-align: center;
  color: var(--white);

  @media (width > 30rem) {
    inline-size: min(100%, 70rem);
  }

  @media (width > 52rem) {
    grid-template-columns: 1fr 0.8fr 0.6fr;
    gap: var(--spacing-400);
    justify-items: initial;
    text-align: initial;
  }

  & > * {
    position: relative;
    z-index: 1;
  }

  &::before {
    position: absolute;
    content: "";
    display: block;
    inset-block-start: 0;
    inset-inline-start: 0;
    inline-size: 100%;
    block-size: 100%;
    background: var(--cyan-600);
    opacity: 0.8;
  }

  .Button {
    @media (width > 52rem) {
      place-self: start end;
    }
  }
}

